Added minimal gradle setup

--- a/build.gradle
+++ b/build.gradle
@@ -28,11 +28,11 @@ test {
 }
 
 application {
-    mainClass.set("seedu.duke.Duke")
+    mainClass.set("Wader.Wader")
 }
 
-shadowJar {
-    archiveBaseName = "duke"
+shadowJar  {
+    archiveBaseName = "Wader"
     archiveClassifier = null
 }
 
