--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      TZ: Asia/Singapore # Set your timezone
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
